--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qurancomfort",
+  "name": "tailwindcss4",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,28 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.10",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "multer": "^2.0.2",
-    "openai": "^5.11.0",
-    "path": "^0.12.7",
+    "google-auth-library": "^10.1.0",
+    "googleapis": "^150.0.1",
+    "mongoose": "^8.16.0",
+    "multer": "^2.0.1",
+    "openai": "^5.7.0",
+    "pdf-parse": "^1.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
+    "@eslint/js": "^9.29.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
-    "eslint": "^9.30.1",
+    "@vitejs/plugin-react": "^4.5.2",
+    "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
+    "globals": "^16.2.0",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4"
+    "typescript-eslint": "^8.34.1",
+    "vite": "^6.3.5"
   }
 }
